2010-01-14  Ulrich Drepper  <drepper@redhat.com>

	* posix/unistd.h: Change getpagesize and getdtablesize declaration
	visibility some more.

	* resolv/netdb.h: Relax condition to elide obsolete resolver constants.

	* posix/unistd.h: Declare getpagesize in _GNU_SOURCE mode.

	[BZ #11120]
	* sysdeps/x86_64/strcmp.S: Prevent silent errors should strncmp be
	needed outside libc.

2010-01-13  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/stdlib.h: Parameter of unsetenv must not be NULL.

2010-01-12  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/multiarch/strlen.S: Unroll the loop.

2010-01-13  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/stdlib.h: Be a bit more relaxed about obsoleted mktemp symbol.

2010-01-12  Ulrich Drepper  <drepper@redhat.com>

	* conform/data/complex.h-data: Test for POSIX2008.

	* conform/data/ctype.h-data: Fix POSIX testing.

	* conform/data/dirent.h-data: ino_t only needed for XSI.

	* grp/grp.h: Declare getgrent and endgrent for XPG7.

	* conform/data/inttypes.h-data: Use same types as the headers.

	* resolv/netdb.h: Don't define old resolver macros for XPG7.

	* conform/data/sys/uio.h-data: Don't exclude POSIX2008.

	* conform/conformtest.pl: Implement tag for allow-header.
	Fix newline handling in allow-header implementation.

	* conform/data/time.h-data: Use allow-header instead of duplicating
	information.

	* conform/data/time.h-data: Allow sigevent tag.

	* posix/sched.h: Define time_t and pid_t for XPG7.

2010-01-12  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/i686/bcopy.S: New file.

	* sysdeps/i386/i686/cacheinfo.c (__x86_64_data_cache_size): Define.

	* sysdeps/i386/i686/memcpy.S (__memcpy_chk): Use ENTRY_CHK
	and END_CHK.
	* sysdeps/i386/i686/memmove.S (__memmove_chk): Likewise.
	* sysdeps/i386/i686/mempcpy.S (__mempcpy_chk): Likewise.
	* sysdeps/i386/i686/memset.S (__memset_chk): Likewise.

	* sysdeps/i386/i686/memmove.S: Support USE_AS_BCOPY.

	* sysdeps/i386/i686/multiarch/Makefile (sysdep_routines): Add